--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "@typescript-eslint/parser": "^8.19.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
@@ -34,8 +32,11 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@blitz/eslint-plugin": "^0.0.44",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
