--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next/core-web-vitals"],
   "rules": {
-    // Add any specific rules here
+    "react/no-unescaped-entities": "off"
   }
 } 
